2006-05-05  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.3.

	* lspci.c (scan_device): The -D switch didn't work as intended
	in -m mode.

2006-05-05  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.2.

	* pci.ids: Updated to the current database snapshot.

	* lib/obsd-device.c (and other files in lib/*): Added OpenBSD
	interface by Matthieu Herrb <matthieu.herrb@laas.fr>, based on
	the existing FreeBSD interface.

	* Moved pciutils to a GIT repository, which now contains merged
	history from both CVS and Arch. Good bye, TLA!

2006-03-21  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_slot_name): Avoid the previous changes in default
	display of domain name when in machine-readable mode. However, `-D'
	forces domain display even there.

	* lspci.man: Added a warning on -m being the only format, which is
	guaranteed to be stable between lspci versions.

2006-03-13  Martin Mares  <mj@ucw.cz>

	* lspci.man: Documented the -D switch.

	* lspci.c (show_slot_name, scan_device): If there are multiple PCI
	domains or if the `-D' switch is used, show the domain number for
	all devices.

	* lspci.c (show_verbose): Report cache line size in bytes.

	* update-pciids.sh: Use curl if available. Patch by Matthew Wilcox.

2006-01-04  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_express_link): Fixed decoding of link status register.
	Thanks to Roland Dreier for his report.

2005-12-12  Martin Mares  <mj@ucw.cz>

	* lib/nbsd-libpci.c: If libpci is used by an ordinary user, allow
	at least read-only access. Patch by Pavel Celeda <celeda@liberouter.org>.

	* Makefile: Corrected library path on NetBSD.

2005-11-26  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.1.

	* lspci.c (show_machine): Subsystem vendors were printed incorrectly
	in machine-readable modes. Thanks to Pavel Celeda for a bug report.

2005-10-11  Martin Mares  <mj@ucw.cz>

	* lspci.c (new_bus): Fixed a memory leak. Thanks to Paul Sangree for reporting it.

2005-09-21  Martin Mares  <mj@ucw.cz>

	* Released as 2.2.0.
